# daily-report-web

./: .gitignore  README.md  cloudbuild.yaml  components.json  env.local  package.json  pnpm-lock.yaml
backend/: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  compose.yml  service.yaml
backend/.sqlx/: query-2bc680c1f377838469e18b52b04a71aafd1961c709949bb8039919cb20a677ce.json  query-688392084fc9f361c9a4a10f8b6a2aeaa80c240665934b70431532f1204c6ea2.json  query-7296bb3ca62a2c9ec4518a1b52848197c89cf8bacb09915ca4a7065c68585f5e.json  query-830e0105679e9a2f383a25bfe59d8a17b8d28d15e5a85f25073e68bdcf4a9882.json  query-c1b241b0e2cf82ce328b93bd4d12617304ee1de87490705146b99572e278f8c7.json
backend/migrations/: 20250309100147_create_reports.up.sql  20250323091431_add_index_date_reports.down.sql  20250323091431_add_index_date_reports.up.sql  20250408133540_create_users.up.sql  20250415002838_add_reports_user_id.down.sql  20250415002838_add_reports_user_id.up.sql  20250428234414_alter_users_password.down.sql  20250428234414_alter_users_password.up.sql  20250505084405_create_accounts.down.sql  20250505084405_create_accounts.up.sql  20250505091108_create_verification_token.down.sql  20250505091108_create_verification_token.up.sql  20250505104403_add_users_image.down.sql  20250505104403_add_users_image.up.sql  20250804140403_create_skills.down.sql  20250804140403_create_skills.up.sql
backend/src/: main.rs
backend/src/infrastructure/: db.rs  mod.rs  report_repository.rs  skill_repository.rs  user_repository.rs
backend/src/usecase/: mod.rs  (+3 more)
(+213 files in other folders)
