[package]
name = "daily-report"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = {version = "1.43.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json="1"
uuid ={version="1", features=["v7", "serde"]}
sqlx={version="0.8.3", features=["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}
tower-http={version="0.6.2", features=["trace", "cors"]}
tower={version = "0.5", features=["timeout"]}
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
async-trait="0.1"
dotenvy="0.15"
chrono= {version="0.4", features=["serde"]}
http="1.2"
hyper="1.0"
jsonwebtoken="9"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["debug-embed","axum"] }